// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StarRating RatingItem applies correct props if item is active 1`] = `
<MockStyledComponent
  $index={1}
  $isActive={true}
  $isSelected={false}
  aria-checked={true}
  aria-posinset={1}
  aria-setsize={5}
  key="1"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseOver={[Function]}
  role="radio"
  tabIndex={0}
/>
`;

exports[`StarRating RatingItem applies correct props if item is selected 1`] = `
<MockStyledComponent
  $index={2}
  $isActive={true}
  $isSelected={true}
  aria-checked={true}
  aria-posinset={2}
  aria-setsize={5}
  key="2"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseOver={[Function]}
  role="radio"
  tabIndex={0}
/>
`;
